--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1303,6 +1303,70 @@ select {
   top: 3rem;
 }
 
+.right-5 {
+  right: 1.25rem;
+}
+
+.top-5 {
+  top: 1.25rem;
+}
+
+.top-\[1\.5rem\] {
+  top: 1.5rem;
+}
+
+.right-\[1\.15rem\] {
+  right: 1.15rem;
+}
+
+.top-\[1\.15rem\] {
+  top: 1.15rem;
+}
+
+.top-\[1\.175rem\] {
+  top: 1.175rem;
+}
+
+.right-\[1\.175rem\] {
+  right: 1.175rem;
+}
+
+.top-\[12px\] {
+  top: 12px;
+}
+
+.right-\[12px\] {
+  right: 12px;
+}
+
+.right-\[16px\] {
+  right: 16px;
+}
+
+.right-\[18px\] {
+  right: 18px;
+}
+
+.right-\[20px\] {
+  right: 20px;
+}
+
+.top-\[20px\] {
+  top: 20px;
+}
+
+.top-\[19px\] {
+  top: 19px;
+}
+
+.right-\[19px\] {
+  right: 19px;
+}
+
+.top-\[18px\] {
+  top: 18px;
+}
+
 .z-\[999\] {
   z-index: 999;
 }
@@ -1837,6 +1901,11 @@ select {
 .bg-gray-50 {
   --tw-bg-opacity: 1;
   background-color: rgb(248 250 252 / var(--tw-bg-opacity));
+}
+
+.bg-gray-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(71 85 105 / var(--tw-bg-opacity));
 }
 
 .p-8 {
@@ -2705,6 +2774,57 @@ select {
     padding-left: 0.5rem;
     padding-right: 0.5rem;
   }
+
+  .md\:text-\[0\.5rem\] {
+    font-size: 0.5rem;
+  }
+
+  .md\:text-white\/50 {
+    color: rgb(255 255 255 / 0.5);
+  }
+}
+
+@media (min-width: 1024px) {
+  .lg\:order-2 {
+    order: 2;
+  }
+
+  .lg\:block {
+    display: block;
+  }
+
+  .lg\:flex {
+    display: flex;
+  }
+
+  .lg\:w-auto {
+    width: auto;
+  }
+
+  .lg\:w-full {
+    width: 100%;
+  }
+
+  .lg\:w-2\/5 {
+    width: 40%;
+  }
+
+  .lg\:max-w-full {
+    max-width: 100%;
+  }
+
+  .lg\:justify-between {
+    justify-content: space-between;
+  }
+
+  .lg\:gap-2 {
+    gap: 0.5rem;
+  }
+
+  .lg\:px-2 {
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+  }
 }
 
 @media (min-width: 1280px) {
@@ -2740,5 +2860,23 @@ select {
     .xl\:container {
       max-width: 1536px;
     }
+  }
+
+  .xl\:w-1\/6 {
+    width: 16.666667%;
+  }
+}
+
+@media (min-width: 1536px) {
+  .\32xl\:w-1\/4 {
+    width: 25%;
+  }
+
+  .\32xl\:w-1\/6 {
+    width: 16.666667%;
+  }
+
+  .\32xl\:w-1\/3 {
+    width: 33.333333%;
   }
 }
