--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1438,6 +1438,21 @@ select {
   margin-bottom: 1rem;
 }
 
+.-my-1\.5 {
+  margin-top: -0.375rem;
+  margin-bottom: -0.375rem;
+}
+
+.-my-1 {
+  margin-top: -0.25rem;
+  margin-bottom: -0.25rem;
+}
+
+.-my-2 {
+  margin-top: -0.5rem;
+  margin-bottom: -0.5rem;
+}
+
 .mb-8 {
   margin-bottom: 2rem;
 }
@@ -2787,6 +2802,10 @@ select {
 @media (min-width: 1024px) {
   .lg\:order-2 {
     order: 2;
+  }
+
+  .lg\:m-0 {
+    margin: 0px;
   }
 
   .lg\:block {
