--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1620,6 +1620,10 @@ select {
   justify-content: space-between;
 }
 
+.justify-around {
+  justify-content: space-around;
+}
+
 .gap-3 {
   gap: 0.75rem;
 }
@@ -1906,6 +1910,10 @@ select {
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
+}
+
+.text-\[22px\] {
+  font-size: 22px;
 }
 
 .font-semibold {
@@ -2576,6 +2584,23 @@ select {
 .dark .dark\:bg-red-700 {
   --tw-bg-opacity: 1;
   background-color: rgb(185 28 28 / var(--tw-bg-opacity));
+}
+
+.dark .dark\:bg-gray-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(30 41 59 / var(--tw-bg-opacity));
+}
+
+.dark .dark\:bg-black\/50 {
+  background-color: rgb(0 0 0 / 0.5);
+}
+
+.dark .dark\:bg-black\/10 {
+  background-color: rgb(0 0 0 / 0.1);
+}
+
+.dark .dark\:bg-black\/20 {
+  background-color: rgb(0 0 0 / 0.2);
 }
 
 .dark .dark\:text-white {
