--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1279,6 +1279,10 @@ select {
   padding-bottom: 0.75rem;
 }
 
+.pointer-events-none {
+  pointer-events: none;
+}
+
 .static {
   position: static;
 }
@@ -1314,20 +1318,40 @@ select {
   top: 3rem;
 }
 
-.top-0 {
-  top: 0px;
+.top-20 {
+  top: 5rem;
 }
 
 .left-0 {
   left: 0px;
 }
 
-.right-0 {
-  right: 0px;
+.top-24 {
+  top: 6rem;
+}
+
+.top-28 {
+  top: 7rem;
+}
+
+.top-\[6\.5rem\] {
+  top: 6.5rem;
+}
+
+.top-\[6\.4rem\] {
+  top: 6.4rem;
+}
+
+.bottom-0 {
+  bottom: 0px;
 }
 
 .z-\[999\] {
   z-index: 999;
+}
+
+.z-10 {
+  z-index: 10;
 }
 
 .order-1 {
@@ -1422,6 +1446,10 @@ select {
   margin-bottom: 0.5rem;
 }
 
+.-mt-px {
+  margin-top: -1px;
+}
+
 .-ml-1 {
   margin-left: -0.25rem;
 }
@@ -1432,10 +1460,6 @@ select {
 
 .mb-3 {
   margin-bottom: 0.75rem;
-}
-
-.-mt-px {
-  margin-top: -1px;
 }
 
 .block {
@@ -1496,10 +1520,6 @@ select {
 
 .h-5 {
   height: 1.25rem;
-}
-
-.h-16 {
-  height: 4rem;
 }
 
 .max-h-40 {
@@ -1588,6 +1608,21 @@ select {
 
 .origin-bottom {
   transform-origin: bottom;
+}
+
+.scale-y-100 {
+  --tw-scale-y: 1;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.scale-y-50 {
+  --tw-scale-y: .5;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.scale-y-0 {
+  --tw-scale-y: 0;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 @-webkit-keyframes spin {
@@ -1771,16 +1806,12 @@ select {
   border-width: 4px;
 }
 
-.border-b-0 {
-  border-bottom-width: 0px;
+.border-b {
+  border-bottom-width: 1px;
 }
 
 .border-r {
   border-right-width: 1px;
-}
-
-.border-b {
-  border-bottom-width: 1px;
 }
 
 .border-l {
@@ -1839,14 +1870,36 @@ select {
   background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
 }
 
-.from-gray-500\/50 {
-  --tw-gradient-from: rgb(100 116 139 / 0.5);
-  --tw-gradient-to: rgb(100 116 139 / 0);
+.bg-gradient-to-t {
+  background-image: linear-gradient(to top, var(--tw-gradient-stops));
+}
+
+.from-gray-600\/25 {
+  --tw-gradient-from: rgb(71 85 105 / 0.25);
+  --tw-gradient-to: rgb(71 85 105 / 0);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
-.to-gray-500\/0 {
-  --tw-gradient-to: rgb(100 116 139 / 0);
+.from-gray-600\/10 {
+  --tw-gradient-from: rgb(71 85 105 / 0.1);
+  --tw-gradient-to: rgb(71 85 105 / 0);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-gray-600\/20 {
+  --tw-gradient-from: rgb(71 85 105 / 0.2);
+  --tw-gradient-to: rgb(71 85 105 / 0);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-gray-600\/50 {
+  --tw-gradient-from: rgb(71 85 105 / 0.5);
+  --tw-gradient-to: rgb(71 85 105 / 0);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.to-gray-600\/0 {
+  --tw-gradient-to: rgb(71 85 105 / 0);
 }
 
 .p-8 {
@@ -2062,16 +2115,8 @@ select {
   opacity: 0;
 }
 
-.shadow-md {
-  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow {
-  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+.opacity-100 {
+  opacity: 1;
 }
 
 .shadow-gray-500\/50 {
@@ -2103,6 +2148,14 @@ select {
 
 .duration-500 {
   transition-duration: 500ms;
+}
+
+.duration-200 {
+  transition-duration: 200ms;
+}
+
+.duration-100 {
+  transition-duration: 100ms;
 }
 
 .default-spacing {
