--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -743,7 +743,6 @@ h5 {
   display: flex;
   width: 100%;
   border-radius: 0.75rem;
-  background-color: rgb(203 213 225 / 0.25);
   font-weight: 600;
   --tw-text-opacity: 1;
   color: rgb(100 116 139 / var(--tw-text-opacity));
@@ -753,6 +752,11 @@ h5 {
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
+  background-color: rgb(203 213 225 / 0.3);
+}
+
+.dark .field-input-holder:not(.field-disabled) {
+  background-color: rgb(0 0 0 / 0.4);
 }
 
 .field-input-holder:not(.field-disabled):focus-within {
@@ -776,7 +780,6 @@ h5 {
 }
 
 .dark .field-input-holder:not(.field-disabled) {
-  background-color: rgb(0 0 0 / 0.5);
   --tw-ring-color: rgb(139 92 246 / 0.5);
 }
 
@@ -834,7 +837,6 @@ h5 {
      -moz-appearance: none;
           appearance: none;
   border-radius: 0.5rem;
-  background-color: rgb(203 213 225 / 0.25);
   padding: 0.75rem;
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -845,6 +847,11 @@ h5 {
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
+  background-color: rgb(203 213 225 / 0.3);
+}
+
+.dark .field-checkbox {
+  background-color: rgb(0 0 0 / 0.4);
 }
 
 .field-checkbox::after {
@@ -882,10 +889,6 @@ h5 {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-}
-
-.dark .field-checkbox {
-  background-color: rgb(0 0 0 / 0.5);
 }
 
 .field-input-holder.field-error {
