--- a/styles/global.css
+++ b/styles/global.css
@@ -21,6 +21,10 @@
 	.border-line {
 		@apply border-t border-black/10 dark:border-gray-700/50;
 	}
+
+	.field-bg {
+		@apply bg-gray-300/30 dark:bg-black/40;
+	}
 }
 
 @layer base {
@@ -93,7 +97,7 @@
 	}
 
 	.field-input-holder:not(.field-disabled) {
-		@apply flex w-full  rounded-xl bg-gray-300/25 font-semibold text-gray-500 ring-brand-500/50 transition focus-within:ring-4 focus-within:ring-brand hover:ring-4 focus-visible:ring-4 dark:bg-black/50 dark:ring-brand-500/50 dark:focus-within:ring-brand;
+		@apply field-bg flex  w-full  rounded-xl  font-semibold text-gray-500 ring-brand-500/50 transition focus-within:ring-4 focus-within:ring-brand hover:ring-4  focus-visible:ring-4 dark:ring-brand-500/50 dark:focus-within:ring-brand;
 	}
 
 	.field-input-holder.field-disabled {
@@ -112,7 +116,7 @@
 	}
 
 	.field-checkbox {
-		@apply relative appearance-none rounded-lg bg-gray-300/25 p-3 outline-none ring-brand transition after:absolute after:top-1/2 after:left-1/2 after:-translate-x-1/2 after:-translate-y-1/2 after:scale-90 after:rounded after:bg-brand  after:p-1.5 after:opacity-0 after:transition after:content-[""] checked:after:scale-100 checked:after:opacity-100 focus:ring-4 dark:bg-black/50;
+		@apply field-bg relative appearance-none rounded-lg p-3 outline-none ring-brand transition after:absolute after:top-1/2 after:left-1/2 after:-translate-x-1/2 after:-translate-y-1/2 after:scale-90 after:rounded after:bg-brand  after:p-1.5 after:opacity-0 after:transition after:content-[""] checked:after:scale-100 checked:after:opacity-100 focus:ring-4;
 	}
 
 	.field-input-holder.field-error {
